# base

devlopment/: README.md
devlopment/WarDrive/Docs/: .engineNames.txt.swp  TitleSelection.txt
devlopment/WarDrive/Experiments/Blender/: untitled3.blend
devlopment/WarDrive/Scripts/: build.sh
devlopment/WarDrive/Source/SubSystems/Core/: CMakeLists.txt
devlopment/WarDrive/Source/SubSystems/Core/Api/: WarDrive.h
devlopment/WarDrive/Source/SubSystems/Core/Src/: WarDrive.cpp
devlopment/WarDrive/Source/SubSystems/InputManager/: CMakeLists.txt
devlopment/WarDrive/Source/SubSystems/InputManager/Api/: InputManager.h
devlopment/WarDrive/Source/SubSystems/InputManager/Src/: InputManager.cpp
devlopment/WarDrive/Source/SubSystems/Renderer/: CMakeLists.txt
devlopment/WarDrive/Source/SubSystems/Renderer/Api/: Camera.h  CubeObject.h  GridPlane.h  IObject.h  Object.h  Pipeline.h  Renderer.h  SimpleModelObject.h
devlopment/WarDrive/Source/SubSystems/Renderer/Src/: Camera.cpp  CubeObject.cpp  GridPlane.cpp  Object.cpp  Pipeline.cpp  Renderer.cpp  SimpleModelObject.cpp
devlopment/WarDrive/Source/TestApp/: CMakeLists.txt
devlopment/WarDrive/Source/TestApp/Assets/3DModel-Rotonda/: 2d278f81-d673-4fc6-bd8a-597e231df34f.tga  5cadf1e5-9be5-4c4d-9e90-90551bd7f874.tga  622f3498-a116-4e32-8e43-ae2b2705e5c5.tga  Rotonda.dae  c022017a-a92c-4d6a-9fce-36610b35af9e.tga  c93ec7b9-26ec-4bd7-8188-b530fd913794.tga
devlopment/WarDrive/Source/TestApp/Assets/SR71/: sr71.mtl
devlopment/WarDrive/Source/TestApp/Assets/jeep_collada/: model.dae
devlopment/WarDrive/Source/TestApp/Assets/low-poly-jeep/source/: Jeep_1.7z
devlopment/WarDrive/Source/TestApp/Assets/low-poly-vietnam-era-jeep/source/: jeep.fbx
devlopment/WarDrive/Source/TestApp/Assets/merkava-tank/source/bd77d5a00b964e5a8071114b34ec59e4/: Merkava_Tank.mtl
devlopment/WarDrive/Source/TestApp/Src/: GridFragmentShader.fragmentshader  GridVertexShader.vertexshader  TestApp.cpp
devlopment/warDrive/code/subsystems/core/api/: WarDrive.h.gch
devlopment/warDrive/code/subsystems/input/src/: InputManager.cpp
devlopment/warDrive/code/testApp/: CMakeLists.txt
devlopment/warDrive/code/testApp/src/: testApp.cpp
productivity/coDEcode/: README.md  coDEcode.sh
setup/raspberry/: backup.sh  config.txt  configure_params.sh  fresh_pi_config.sh  fresh_pi_install.sh  fresh_setup.sh  install.sh  install_programs.sh  onBootScript_install.sh  on_boot.sh  raspi_params.sh  setup.sh
setup/raspberry/backup/: .rsync-exclude.txt.swp  backup.sh  restore.sh
setup/raspberry/backup/unused.off/: raspi_iso_backup.sh.untested.sh
setup/raspberry/configuration/: config.txt  configure_params.sh
setup/raspberry/on_boot/: install_boot_script.sh  on_boot.sh
temp/: README.md
